--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 SECRET_KEY=django-insecure-=u4=c^it=mi#(3mp9_qz+im1g3w*)#7==9wht)s+v(p%=uw^-y
 DEBUG=True
-TIME_ZONE=Asia/Yekaterinburg
+TIME_ZONE='Asia/Yekaterinburg'
 DATABASES_NAME=drfproject
 DATABASES_USER=postgres
 DATABASES_PASSWORD=1238
