--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ pillow = "^10.4.0"
 djangorestframework = "^3.15.2"
 python-dotenv = "^1.0.1"
 flake8 = "^7.1.0"
+django-filter = "^24.2"
 
 
 [build-system]
